# email-newsletter-rust

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250630140317_make_status_not_null_in_subscriptions.sql  20250630141226_create_subscription_tokens_table.sql  20250807170050_create_users_table.sql  20251002153509_seed_user.sql
scripts/: README.md  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  email_request.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs  test_health_check.rs
tests/api/: helpers.rs  main.rs  subscriptions_confirm.rs  test_admin_dashboard.rs  test_change_password.rs  test_health_check.rs  test_login.rs  test_newsletter.rs  test_subscription.rs  test_subscriptions_confirm.rs
