[package]
name = "email-newsletter-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ayush Tickoo <ayush.tickoo292000@gmail.com>"]

[lib]
name = "email_newsletter_rust"
path = "src/lib.rs"

[[bin]]
name = "email-newsletter-rust-bin1"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
reqwest="0.11.0"
serde = { version = "1.0.0", features = ["derive"]}
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1.0", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1.8"
secrecy = { version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.5.0"
serde-aux = "3.0.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

# Needs to be added to resolve error[E0432] caused when building the application after importing sqls crate
# It occurs due to the conflict of "syn" version are added
# check: https://github.com/launchbadge/sqlx/issues/2418
[build-dependencies]
syn = "1"